--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -17,5 +17,10 @@
     state: started
     enabled: yes
 
-- name: setup root password
-  ansible.builtin.command: mysql_secure_installation --set-root-pass RoboShop@1
+#for roboshop-ansible-roles (directly giving password)
+# - name: setup root password
+#   ansible.builtin.command: mysql_secure_installation --set-root-pass RoboShop@1
+
+#for roboshop-ansible-roles-tf(storing password manually in ssm store and retreiving)
+- name : setup root password
+  ansible.builtin.command : "mysql_secure_installation --set-root-pass {{ lookup('aws_ssm', '/roboshop/{{env}}/mysql_root_pass' , region = 'us-east-1',  decrypt = True)}}"
