--- a/roles/rabbitmq/tasks/main.yaml
+++ b/roles/rabbitmq/tasks/main.yaml
@@ -16,8 +16,24 @@
       state: restarted
       enabled: yes
 
-  - name: create rabbitmq user
-    ansible.builtin.command: rabbitmqctl add_user roboshop roboshop123
+  
+#for roboshop-ansible-roles (directly giving password)
+  # - name: create rabbitmq user
+  #   ansible.builtin.command: rabbitmqctl add_user roboshop roboshop123
 
-  - name: set permissions
-    ansible.builtin.command: rabbitmqctl set_permissions -p / roboshop ".*" ".*" ".*"
+  # - name: set permissions
+  #   ansible.builtin.command: rabbitmqctl set_permissions -p / roboshop ".*" ".*" ".*"
+
+
+#for roboshop-ansible-roles-tf(storing password manually in ssm store and retreiving)
+
+
+  - name : create rabbitmq user and giving permissions
+    community.rabbitmq.rabbitmq_user:
+      user: "{{ lookup('aws_ssm', '/roboshop/{{env}}/rabbitmq_user' , region = 'us-east-1',  decrypt = True)}}"
+      password:  "{{ lookup('aws_ssm', '/roboshop/{{env}}/rabbitmq_password' , region = 'us-east-1',  decrypt = True)}}"
+      vhost: /
+      configure_priv: .*
+      read_priv: .*
+      write_priv: .*
+      state: present
