--- a/variables-prod.yaml
+++ b/variables-prod.yaml
@@ -8,3 +8,5 @@ RABBITMQ_HOST  : rabbitmq-prod.arundev.online
 SHIPPING_HOST  : shipping-prod.arundev.online
 PAYMENT_HOST   : payment-prod.arundev.online
 DISPATCH_HOST  : dispatch-prod.arundev.online
+NEXUS_URL : http://172.31.25.31:8081/repository
+group_id : "com/roboshop"
